<resources>
    <string name="app_name">Stars Runway</string>
    <string name="login_form">Login Form</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="cancel">Cancel</string>
    <string name="developed_by_farid">Developed by IKC</string>
    <string name="pendaftaran">Create New User</string>
    <string name="nama">Nama</string>
    <string name="enter_nama">Enter Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_repassword">Re-Type Password</string>
    <string name="visit">Visit</string>
    <string name="sampling">Sampling</string>
    <string name="pi">PI</string>
    <string name="sub_menu_activity">Sub-Menu Activity</string>
    <string name="main_menu">Main Menu</string>
    <string name="activity">Activity</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>
    <string name="menu_visit">Menu Visit</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam">Jam</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="view">View</string>
    <string name="update_delete">Updatee / Delete</string>
    <string name="tampilkan_data">Tampilkan Data</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Tambah Data</string>
    <string name="status">Status</string>
    <string name="tambah_data_in">Tambah Data In</string>
    <string name="menu_sampling">Menu Sampling</string>
    <string name="come">Come</string>
    <string name="go">Go</string>
    <string name="enter_type">Enter Type</string>
    <string name="bypass">bypass</string>
    <string name="location">Location</string>
    <string name="kd_toko">Kode Toko</string>
    <string name="asm">Kode ASM</string>
    <string name="tambah_data_out">Tambah Data Out</string>
    <string name="kd_asm">Kode ASM</string>
    <string name="no">No</string>
    <string name="ket">Keterangan</string>
    <string name="Ket">Keterangan</string>
    <string name="view_go">View Go</string>
    <string name="view_come">View Come</string>
    <string name="tambah_data_come">Tambah Data Come</string>
    <string name="view_in">View In</string>
    <string name="view_out">View Out</string>
    <string name="komentar">Komentar</string>
    <string name="keterangan">Keterangan</string>
    <string name="type">Type</string>
    <string name="tambah_data_go">Create Data Go</string>
    <string name="result">Result</string>
    <string name="Pi">PI</string>
    <string name="menu_pi">Menu Pi</string>
    <string name="view_pi">View Pi</string>
    <string name="view_result">View Result</string>
    <string name="tambah_data_pi">Tambah Data Pi</string>
    <string name="tambah_data_result">Tambah Data Result</string>
    <string name="enter_asm">Enter Kode ASM</string>
    <string name="toko">Toko</string>
    <string name="view_data_toko">View Data Toko</string>
    <string name="view_maps">View Maps</string>
    <string name="menu_toko">Menu Toko</string>
    <string name="alamat">Alamat</string>
    <string name="sms">SMS</string>
    <string name="kabupaten">Kabupaten/Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="menu_report">Menu Report</string>
    <string name="hit_list">Hit Lists</string>
    <string name="best_seller">Best Seller</string>
    <string name="rangking_toko">Rangking Toko</string>
    <string name="nama_asm">Nama ASM</string>
    <string name="kd_aksi">Kode Aksi</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="hasil_aksi">Hasil Aksi</string>
    <string name="title_activity_maps_in_visit">Map</string>
    <string name="view_maps_in">View Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_view_in">Map</string>
    <string name="prj">PRJ</string>
    <string name="ret_prc">RETPRC</string>
    <string name="sls">SLS</string>
    <string name="stdt">STDT</string>
    <string name="stok">Stok</string>
    <string name="gr">GR</string>
    <string name="mrg">MRG</string>
    <string name="dis">DIS</string>
    <string name="tg1">TG1</string>
    <string name="tg2">TG2</string>
</resources>
